[gd_scene load_steps=3 format=3 uid="uid://ftccgwapueck"]

[ext_resource type="Script" path="res://GUI/main_menu.gd" id="1_k1glb"]
[ext_resource type="Script" path="res://Phases/chatbox.gd" id="2_5a1ng"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k1glb")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Username:"

[node name="UsernameEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HostBtn" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Host Lobby"

[node name="JoinBtn" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Join Lobby"

[node name="IPAddressEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "IP Address"

[node name="LineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Chat!"

[node name="Panel" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ChatBox" type="RichTextLabel" parent="CenterContainer/VBoxContainer/Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 400)
layout_mode = 2
bbcode_enabled = true
scroll_following = true
script = ExtResource("2_5a1ng")

[node name="StartGameBtn" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[connection signal="text_submitted" from="CenterContainer/VBoxContainer/HBoxContainer2/UsernameEdit" to="." method="_on_username_edit_text_submitted"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/HostBtn" to="." method="_on_host_btn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/JoinBtn" to="." method="_on_join_btn_pressed"]
[connection signal="text_submitted" from="CenterContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartGameBtn" to="." method="_on_start_game_btn_pressed"]
